# SciTrace

./: .env.example  .gitignore  LICENSE  Makefile  README.md  h -f origin main  pyproject.toml  requirements.txt  setup.py  tmp_decompile.txt  tmp_dis2.txt
configs/main/: deepseekv3_bare.yaml  deepseekv3_safescientist.yaml  deepseekv3_scitrace.yaml  gpt4o_bare.yaml  gpt4o_safescientist.yaml  gpt4o_scitrace.yaml  llama31_70b_bare.yaml  llama31_70b_safescientist.yaml  llama31_70b_scitrace.yaml  qwen25_72b_bare.yaml  qwen25_72b_safescientist.yaml  qwen25_72b_scitrace.yaml
data/case_studies/: figure10_chemistry_case.json  figure11_info_sci_case.json  figure12_medicine_case.json  figure9_biology_case.json  (+4 more)
docs/: index.html
experiments/: README.md  defaults.json  index.json  index.yaml  index_benchmark_outputs.json
registry/: reported_results.json  risk_taxonomy.json
results/: run_metrics_alignment_report.json
scitrace/: __init__.py  calibration.py  cli.py  ctv.py  experiment_paths.py  experiment_targets.py  pipeline.py  pipeline_config.py  results_paths.py  risk_state.py  safety_memory.py  sir.py  taxonomy.py
scripts/: build_site.py  evaluate_results.py  launch_vllm.sh  run_experiments.sh  run_single_config.py  scitrace_framework.py
site/: index.html
src/: __init__.py  experiment_paths.py  pipeline.py  results_paths.py
tests/: __init__.py  test_case_studies.py  test_ctv.py  test_experiment_yaml_configs.py  test_fallback_filters.py  test_pipeline.py  test_pipeline_methods.py  test_risk_state.py  test_scoring.py  test_sir.py  test_tool_registry.py
(+12438 files in other folders)
