[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scitrace"
version = "0.1.0"
description = "Trajectory-aware safety reasoning scaffold for scientific discovery agents."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "SciTrace contributors"}]
keywords = [
  "ai-safety",
  "scientific-agents",
  "tool-use",
  "llm-agents",
  "trajectory-verification",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
scitrace = "scitrace.cli:main"

[tool.setuptools.packages.find]
include = ["scitrace*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
