[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scitrace"
version = "0.1.0"
description = "Trajectory-aware safety reasoning for scientific discovery agents"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "openai>=1.30.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]
vllm = [
  "torch>=2.2.0",
  "vllm>=0.4.0",
  "transformers>=4.40.0",
  "accelerate>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["src*"]
